--- a/life_time.html
+++ b/life_time.html
@@ -7,20 +7,22 @@
         <link rel="stylesheet" type="text/css" href="./style.css">
     </head>
 <body>
-    <h1>寿命診断サイト</h1>
+    <h1>人生の残り日数診断サイト</h1>
+    <h2>0~80才の方は自身の年齢と性別を選択してください。</h2>
     <form method="post" action='life_time.php'>
         <p>
-            <label>年齢</label>
+            <label>年齢：</label>
             <input type="text" name='age'>
         </p>
         <p>
-            <label>性別</label>
+            <label>性別：</label>
             <label><input type="radio" name="cs" value="男性" >男性</label>
             <label><input type="radio" name="cs" value="女性" >女性</label>
+            <label><input type="radio" name="cs" value="その他" >指定しない</label>
         </p>
         <p>
         <p class = 'button'>
-            <input type="submit" value="送信する">
+            <input type="submit" value="診断する">
         </p>
     </form>
 </body>
