ブランチでの作業の練習です

--- a/life_time.html
+++ b/life_time.html
@@ -8,6 +8,7 @@
     </head>
 <body>
     <h1>人生の残り日数診断サイト</h1>
+    <h2>ブランチでの作業の練習です</h2>
     <h2>0~80才の方は自身の年齢と性別を選択してください。</h2>
     <form method="post" action='life_time.php'>
         <p>
